add imprint, data protection statement, infos

--- a/client/fluxfail.css
+++ b/client/fluxfail.css
@@ -5,6 +5,10 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+body h1,h2,h3,h4,h5,h6 {
+  font-family: Oswald, sans-serif;
+}
+
 main {
   margin-top: 64px;
   padding: 6px 24px;
