--- a/client/assets/css/fluxfail.css
+++ b/client/assets/css/fluxfail.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: #444444;
   margin: 0;
   padding: 0;
   font-family: Roboto, sans-serif;
@@ -14,4 +14,8 @@ main h2 {
   font-weight: normal;
   padding-bottom: 0;
   margin-bottom: 0;
+}
+
+pre {
+  white-space: pre-line;
 }
