--- a/site/assets/css/styles.css
+++ b/site/assets/css/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 html {
@@ -103,7 +104,7 @@ section h3 {
 
 section p {
   max-width: 775px;
-  line-height: 1.5;
+  line-height: 1.25;
   text-align: left;
   margin-right: 40px;
 }
@@ -136,7 +137,7 @@ section p + p {
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 3rem;
   margin: 60px 0;
 }
 
@@ -176,4 +177,8 @@ footer {
     margin-right: 0;
   }
   
+}
+
+.justified {
+  margin-right: 0px;
 }
