add support for plusone

--- a/client/assets/css/ant-override.css
+++ b/client/assets/css/ant-override.css
@@ -9,3 +9,7 @@
 .ant-timeline-item-last .ant-timeline-item-content {
     min-height: 32px !important;
 }
+
+body {
+    line-height: 1 !important;
+}
